--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,44 @@
 </head>
 <body>
 
-<%= yield %>
+<div class="container wrap">
+  <div class="row">
+    <div class="col-xs-12">
+      <header>
+        <div class="well">
+          Bluit
+        </div>
+      </header>
+    </div>
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-8">
+        <main>
+          <div class="well">
+            <!-- BEGIN main content -->
+            <%= yield %>
+            <!-- END main content -->
+          </div>
+        </main>
+      </div>
+      <div class="col-xs-4">
+        <nav id="sidebar">
+          <div class="well">
+            sidebar
+          </div>
+        </nav>
+      </div>
+    </div>
+  </div>
+  <div class="push"></div>
+</div>
+
+<footer>
+  <div class="well">
+    footer
+  </div>
+</footer>
 
 </body>
 </html>
