--- a/app/assets/stylesheets/style.sass
+++ b/app/assets/stylesheets/style.sass
@@ -1,3 +1,21 @@
+*
+  margin: 0
+
+html, body
+  height: 100%
+
+.wrap
+  min-height: 100%
+  height: auto !important
+  height: 100%
+  margin: 0 auto -60px
+
+footer, .push
+  height: 60
+
+footer .well
+  margin-bottom: 0
+
 .container
   width: 100% !important
   padding-left: 0 !important
