Style header, main, sidebar, and footer.

--- a/app/assets/stylesheets/style.sass
+++ b/app/assets/stylesheets/style.sass
@@ -28,3 +28,65 @@ footer .well
 .col-xs-12
   padding-left: 0 !important
   padding-right: 0 !important
+
+header
+  background-color: #cee3f8
+  height: 45px
+  font-size: 18px
+  line-height: 45px
+  margin-bottom: 0
+  padding: 0 1rem
+
+main
+  margin-left: 10px
+  ul.posts
+    padding-left: 0
+    li
+      list-style: none
+      margin-bottom: 8px
+      .title
+        font-size: 16px
+        a:link, a:hover, a:active
+          color: blue
+        a:visited
+          color: #551a8b
+      .tagline
+        color: #888
+        font-size: x-small
+
+nav#sidebar
+  margin-right: 10px
+  a
+    display: block
+    text-align: center
+    border: 1px solid #c4dbf1
+    font-size: 16px
+    font-weight: bold
+    height: 29px
+    margin-bottom: 12px
+    line-height: 29px
+    color: #369
+    background: #fff
+    background: -moz-linear-gradient(top,  #ffffff 0%, #ebf3fc 100%)
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(100%,#ebf3fc))
+    background: -o-linear-gradient(top,  #ffffff 0%,#ebf3fc 100%)
+    background: -ms-linear-gradient(top,  #ffffff 0%,#ebf3fc 100%)
+    background: linear-gradient(to bottom,  #ffffff 0%,#ebf3fc 100%)
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ebf3fc',GradientType=0 )
+
+  a:hover
+    color: white
+    text-decoration: none
+    background: #d7ebff
+    background: -moz-linear-gradient(top,  #d7ebff 0%, #aec8e1 50%, #9cbcd9 51%, #74a4d2 100%)
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#d7ebff), color-stop(50%,#aec8e1), color-stop(51%,#9cbcd9), color-stop(100%,#74a4d2))
+    background: -webkit-linear-gradient(top,  #d7ebff 0%,#aec8e1 50%,#9cbcd9 51%,#74a4d2 100%)
+    background: -o-linear-gradient(top,  #d7ebff 0%,#aec8e1 50%,#9cbcd9 51%,#74a4d2 100%)
+    background: -ms-linear-gradient(top,  #d7ebff 0%,#aec8e1 50%,#9cbcd9 51%,#74a4d2 100%)
+    background: linear-gradient(to bottom,  #d7ebff 0%,#aec8e1 50%,#9cbcd9 51%,#74a4d2 100%)
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d7ebff', endColorstr='#74a4d2',GradientType=0 )
+
+footer
+  color: gray
+  font-size: smaller
+  text-align: center
