--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,7 @@
   <div class="row">
     <div class="col-xs-12">
       <header>
-        <div class="well">
-          <%= link_to "Bluit", root_path %>
-        </div>
+        <%= link_to "Bluit", root_path %>
       </header>
     </div>
   </div>
@@ -22,18 +20,14 @@
     <div class="row">
       <div class="col-xs-8">
         <main>
-          <div class="well">
-            <!-- BEGIN main content -->
-            <%= yield %>
-            <!-- END main content -->
-          </div>
+          <!-- BEGIN main content -->
+          <%= yield %>
+          <!-- END main content -->
         </main>
       </div>
       <div class="col-xs-4">
         <nav id="sidebar">
-          <div class="well">
-            <%= link_to "Submit a new link", new_post_path %>
-          </div>
+          <%= link_to "Submit a new link", new_post_path %>
         </nav>
       </div>
     </div>
@@ -42,9 +36,7 @@
 </div>
 
 <footer>
-  <div class="well">
-    footer
-  </div>
+  Use of this site constitutes acceptance of the <a href="http://dresdenfiles.wikia.com/wiki/Unseelie_Accords">Unseelie Accords</a>.
 </footer>
 
 </body>
