--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
     <div class="row">
       <div class="col-xs-8">
         <main>
-          <%= flash_messages flash %>
+          <%= flash_messages(flash) unless flash.empty? %>
           <!-- BEGIN main content -->
           <%= yield %>
           <!-- END main content -->
