Make the footer stick to the bottom.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,9 @@
       </div>
     </div>
   </div>
+  <div class="push"></div>
 </div>
+
 <footer>
   <div class="well">
     &copy; Super Original Productions, Inc.
