--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <div class="col-xs-12">
       <header>
         <div class="well">
-          Bluit
+          <%= link_to "Bluit", posts_path %>
         </div>
       </header>
     </div>
@@ -32,7 +32,7 @@
       <div class="col-xs-4">
         <nav id="sidebar">
           <div class="well">
-            sidebar
+            <%= link_to "Submit a new link", new_post_path %>
           </div>
         </nav>
       </div>
