Style header, main, sidebar, and footer.

--- a/app/assets/stylesheets/style.sass
+++ b/app/assets/stylesheets/style.sass
@@ -25,3 +25,53 @@ footer, .push
 .col-xs-12
   padding-left: 0 !important
   padding-right: 0 !important
+
+header
+  background-color: #cee3f8
+  height: 45px
+  line-height: 45px
+  font-size: 18px
+  margin-bottom: 10px
+  padding: 0 1rem
+
+main
+  margin-left: 10px
+  ul.posts
+    padding-left: 0
+    li
+      list-style: none
+      margin-bottom: 8px
+      .title
+        font-size: 16px
+        a:link, a:hover, a:active
+          color: blue
+        a:visited
+          color: #551a8b
+      .tagline
+        color: #888
+        font-size: x-small
+
+nav#sidebar
+  margin-right: 10px
+  a
+    display: block
+    text-align: center
+    border: 1px solid #c4dbf1
+    font-size: 16px
+    font-weight: bold
+    height: 29px
+    line-height: 29px
+    margin-bottom: 12px
+    color: #369
+    background: white
+    background: linear-gradient(to bottom, white 0%, #ebf3fc 100%)
+  a:hover
+    text-decoration: none
+    color: white
+    background: #d7ebff
+    background: linear-gradient(to bottom, #d7ebff 0%, #aec8e1 50%, #9cbcd9 51%, #74a4d2 100%)
+    
+footer
+  color: gray
+  font-size: smaller
+  text-align: center
