Display flash messages upon creating posts.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,7 @@
     <div class="row">
       <div class="col-xs-8">
         <main>
+            <%= flash_messages flash %>
             <!-- BEGIN main content -->
             <%= yield %>
             <!-- END main content -->
