--- a/app/assets/stylesheets/style.sass
+++ b/app/assets/stylesheets/style.sass
@@ -44,15 +44,26 @@ main
     li
       list-style: none
       margin-bottom: 8px
-      .title
-        font-size: 16px
-        a:link, a:hover, a:active
-          color: blue
-        a:visited
-          color: #551a8b
-      .tagline
-        color: #888
-        font-size: x-small
+
+ul.posts, article
+  .title
+    font-size: 16px
+    a:link, a:hover, a:active
+      color: blue
+    a:visited
+      color: #551a8b
+  .tagline
+    color: #888
+    font-size: x-small
+  section.body
+    border: 1px solid #3498db
+    border-radius: 7px
+    margin: 15px 0
+    padding: 5px
+    background-color: #fafafa
+    max-width: 60em
+    overflow: auto
+    font-size: small
 
 nav#sidebar
   margin-right: 10px
