Style forms and flash success messages.

--- a/app/assets/stylesheets/style.sass
+++ b/app/assets/stylesheets/style.sass
@@ -39,11 +39,29 @@ header
 
 main
   margin-left: 10px
+  padding-top: 10px
   ul.posts
     padding-left: 0
     li
       list-style: none
       margin-bottom: 8px
+  form
+    margin-bottom: 20px
+    fieldset
+      width: 514px
+      padding: 7px 5px
+      font-size: large
+      background-color: #cee3f8
+      margin-bottom: 10px
+      input[type="text"], input[type="url"], textarea, select
+        width: 100%
+        font-size: 14px
+        line-height: 14px
+        padding: 6px 12px
+        border: 1px solid #ccc
+        border-radius: 4px
+      textarea
+        height: 100px
 
 ul.posts, article
   .title
@@ -67,6 +85,7 @@ ul.posts, article
 
 nav#sidebar
   margin-right: 10px
+  padding-top: 10px
   a
     display: block
     text-align: center
