--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -9,6 +9,9 @@
       <div class="tagline" title="<%= post.created_at %>">
         submitted <%= time_ago_in_words post.created_at %> ago
       </div>
+      <ul class="actions">
+        <li><%= link_to "edit", edit_post_path(post) %></li>
+      </ul>
     </li>
   <% end %>
 </ul>
