--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -10,4 +10,7 @@
       <%= @post.body %>
     </section>
   <% end %>
+  <ul class="actions">
+    <li><%= link_to "edit", edit_post_path(@post) %></li>
+  </ul>
 </article>
