--- a/app/assets/stylesheets/style.sass
+++ b/app/assets/stylesheets/style.sass
@@ -82,6 +82,20 @@ ul.posts, article
     max-width: 60em
     overflow: auto
     font-size: small
+  ul.actions
+    list-style-type: none
+    padding: 1px 0
+    li
+      display: inline-block
+      padding-right: 4px
+      font-size: x-small
+      line-height: 1.6em
+      white-space: nowrap
+      a
+        color: #888
+        font-weight: bold
+        padding: 0 1px
+        text-decoration: none
 
 nav#sidebar
   margin-right: 10px
