--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -11,6 +11,7 @@
       </div>
       <ul class="actions">
         <li><%= link_to "edit", edit_post_path(post) %></li>
+        <li><%= link_to "delete", post, method: :delete, data: { confirm: "Are you sure? This cannot be undone." } %></li>
       </ul>
     </li>
   <% end %>
