--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,16 +1,9 @@
 <article class="post">
-  <div class="title">
-    <%= link_to @post.title, @post.link_url %>
-  </div>
-  <div class="tagline" title="<%= @post.created_at %>">
-    submitted <%= time_ago_in_words @post.created_at %> ago
-  </div>
+  <%= render "slug", post: @post %>
   <% if @post.body? %>
     <section class="body">
       <%= @post.body %>
     </section>
   <% end %>
-  <ul class="actions">
-    <li><%= link_to "edit", edit_post_path(@post) %></li>
-  </ul>
+  <%= render "actions", post: @post %>
 </article>
