--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,5 +1,10 @@
 <%= form_for @post do |f| %>
   <fieldset>
+    <%= f.label :category_id %>
+    <%= f.collection_select :category_id, Category.all, :id, :name, prompt: "-- Select a category --" %>
+  </fieldset>
+
+  <fieldset>
     <%= f.label :title %>
     <%= f.text_field :title %>
   </fieldset>
