Link text posts to show page.

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,7 +2,7 @@
   <% @posts.each do |post| %>
     <li>
       <div class="title">
-        <%= link_to post.title, post.link_url %>
+        <%= link_to post.title, post_details(post) %>
       </div>
       <div class="tagline" title="<%= post.created_at %>">
         submitted <%= time_ago_in_words post.created_at %> ago
