Style the form and autofocus title.

--- a/app/assets/stylesheets/style.sass
+++ b/app/assets/stylesheets/style.sass
@@ -41,6 +41,23 @@ main
     li
       list-style: none
       margin-bottom: 8px
+  form
+    margin-bottom: 20px
+    fieldset
+      width: 514px
+      padding: 7px 5px
+      font-size: large
+      background-color: #cee3f8
+      margin-bottom: 10px
+      input[type="text"], input[type="url"], textarea, select
+        width: 100%
+        font-size: 14px
+        line-height: 14px
+        padding: 6px 12px
+        border: 1px solid #ccc
+        border-radius: 4px
+      textarea
+        height: 100px
 
 ul.posts, article
   .title
