--- a/app/assets/stylesheets/style.sass
+++ b/app/assets/stylesheets/style.sass
@@ -69,6 +69,20 @@ ul.posts, article
   .tagline
     color: #888
     font-size: x-small
+  ul.actions
+    list-style-type: none
+    padding: 1px 0
+    li
+      display: inline-block
+      padding-right: 4px
+      font-size: x-small
+      line-height: 1.6em
+      white-space: nowrap
+      a
+        color: #888
+        font-weight: bold
+        padding: 0 1px
+        text-decoration: none
 
 article
   section.body
