--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,16 +1,1 @@
-<%= form_for @post do |f| %>
-  <fieldset>
-    <%= f.label :title %>
-    <%= f.text_field :title, autofocus: true %>
-  </fieldset>
-  <fieldset>
-    <%= f.label :link_url %>
-    <%= f.url_field :link_url %>
-  </fieldset>
-  <fieldset>
-    <%= f.label :body %>
-    <%= f.text_area :body %>
-  </fieldset>
-
-  <%= f.submit class: "btn btn-default" %>
-<% end %>
+<%= render "form" %>
