--- a/app/views/posts/_actions.html.erb
+++ b/app/views/posts/_actions.html.erb
@@ -1,3 +1,4 @@
 <ul class="actions">
   <li><%= link_to "edit", edit_post_path(post) %></li>
+  <li><%= link_to "delete", post_path(post), method: :delete, data: { confirm: "Are you sure? This cannot be undone." } %></li>
 </ul>
