Show category descriptions.

--- a/app/assets/stylesheets/style.sass
+++ b/app/assets/stylesheets/style.sass
@@ -134,3 +134,11 @@ footer
   color: gray
   font-size: smaller
   text-align: center
+
+.category
+  h2
+    margin-top: 0
+  .description
+    padding-bottom: 0.5em
+    border-bottom: 1px solid gray
+    margin-bottom: 0.5em
