--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,10 @@
       <div class="col-xs-4">
         <nav id="sidebar">
           <%= link_to "Submit a new link", new_post_path %>
+          <%= link_to "Create your own subbluit", new_category_path %>
+          <div>
+            <%= yield :sidebar %>
+          </div>
         </nav>
       </div>
     </div>
