Display posts by category.

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -4,4 +4,6 @@
   <div class="description">
     <%= @category.description %>
   </div>
+
+  <%= render "posts/list", posts: @category.posts %>
 </div>
