--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,10 +1,3 @@
 <h1>Posts</h1>
 
-<ul class="posts">
-  <% @posts.each do |post| %>
-    <li>
-      <%= render "slug", post: post %>
-      <%= render "actions", post: post %>
-    </li>
-  <% end %>
-</ul>
+<%= render "list", posts: @posts %>
