Display categories across the top of the page.

--- a/app/assets/stylesheets/style.sass
+++ b/app/assets/stylesheets/style.sass
@@ -142,3 +142,27 @@ footer
     padding-bottom: 0.5em
     border-bottom: 1px solid gray
     margin-bottom: 0.5em
+
+nav#categories
+  background-color: #f0f0f0
+  white-space: nowrap
+  text-transform: uppercase
+  border-bottom: 1px solid gray
+  font-size: 10px
+  height: 18px
+  line-height: 18px
+  margin-bottom: 0
+  ul
+    display: inline
+    position: absolute
+    right: 0
+    left: 95px
+    overflow: hidden
+    list-style: none
+    padding: 0
+    margin: 0
+    li
+      display: inline
+      .separator
+        color: gray
+        margin: 0 0.7ex
