--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,20 @@
   <div class="row">
     <div class="col-xs-12">
       <nav id="categories">
-        <ul>
+        <div class="dropdown">
+          <button id="dLabel" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Categories
+            <span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+            <% Category.find_each do |category| %>
+              <li role="presentation">
+                <%= link_to category.name, category, role: 'menuitem', tabindex: "-1" %>
+              </li>
+            <% end %>
+          </ul>
+        </div>
+        <ul class="category-list">
           <% Category.all.each_with_index do |category, i| %>
             <li>
               <% if i > 0 %>
