Add a category dropdown to the layout.

--- a/app/assets/stylesheets/style.sass
+++ b/app/assets/stylesheets/style.sass
@@ -151,3 +151,13 @@ nav#categories
       .separator
         color: gray
         margin: 0 0.7ex
+  .dropdown
+    float: left
+    padding-left: 5px
+    button
+      text-transform: uppercase
+      border: 0
+      background-color: inherit
+      padding: 0
+    .dropdown-menu
+      font-size: 10px
