--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,19 @@
   <div class="row">
     <div class="col-xs-12">
       <nav id="categories">
+        <div class="dropdown">
+          <button type="button" id="category_menu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Categories
+            <span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu" role="menu" aria-labelledby="category_menu">
+            <% Category.find_each do |category| %>
+              <li role="presentation">
+                <%= link_to category.name, category, role: "menuitem", tabindex: "-1" %>
+              </li>
+            <% end %>
+          </ul>
+        </div>
         <ul class="category-links">
           <% Category.all.each_with_index do |category, i| %>
             <li>
