--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -5,7 +5,7 @@
   </fieldset>
   <fieldset>
     <%= f.label :category_id %>
-    <%= f.collection_select :category_id, Category.all, :id, :name, prompt: "-- Select a category --" %>
+    <%= f.collection_select :category_id, categories, :id, :name, prompt: "-- Select a category --" %>
   </fieldset>
   <fieldset>
     <%= f.label :link_url %>
