--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -6,5 +6,5 @@
     <%= @category.description %>
   </div>
 
-  <%= render "posts/list", posts: @category.posts %>
+  <%= render "posts/list", posts: @posts %>
 </div>
