Authenticate users with devise.

--- a/app/assets/stylesheets/style.sass
+++ b/app/assets/stylesheets/style.sass
@@ -161,3 +161,14 @@ nav#categories
       padding: 0
     .dropdown-menu
       font-size: 10px
+
+#session_actions
+  position: absolute
+  right: 0px
+  bottom: 0px
+  background-color: #eff7ff
+  padding: 4px
+  margin-bottom: 10px
+  line-height: 12px
+  border-top-left-radius: 7px
+  font-size: x-small
