--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,33 +11,16 @@
 <div class="container wrap">
   <div class="row">
     <div class="col-xs-12">
-      <nav id="categories">
-        <div class="dropdown">
-          <button type="button" id="category_menu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Categories
-            <span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu" role="menu" aria-labelledby="category_menu">
-            <% categories.each do |category| %>
-              <li role="presentation">
-                <%= link_to category.name, category, role: "menuitem", tabindex: "-1" %>
-              </li>
-            <% end %>
-          </ul>
-        </div>
-        <ul class="category-links">
-          <% categories.each_with_index do |category, i| %>
-            <li>
-              <% if i > 0 %>
-                <span class="separator">-</span>
-              <% end %>
-              <%= link_to category.name, category %>
-            </li>
-          <% end %>
-        </ul>
-      </nav>
+      <%= render "layouts/categories_nav" %>
       <header>
         <%= link_to "Bluit", posts_path %>
+        <div id="session_actions">
+          <% if user_signed_in? %>
+            <%= link_to "logout", destroy_user_session_path, method: :delete %>
+          <% else %>
+            <%= link_to "login", new_user_session_path %>
+          <% end %>
+        </div>
       </header>
     </div>
   </div>
